AI Improvement (fallback) Refactor BranchEvolutionManager: Improved readability, added detailed method-level comments, and optimized exception handling. AI Improvement (fallback) Refactor GitHubIssueManager: Improved modularity, readability, error handling, and refactored repetitive code. Refactor GitManager: Simplified Git command execution, improved token loading, and optimized error handling for better readability and maintainability.